nova tentativa de corrigir o encode das páginas

--- a/src/MoneyManager.Web/App.razor
+++ b/src/MoneyManager.Web/App.razor
@@ -4,7 +4,7 @@
 @using MoneyManager.Web.Shared
 
 <CascadingAuthenticationState>
-
+    <meta charset="utf-8" />
     <Router AppAssembly="@typeof(App).Assembly">
         <Found Context="routeData">
             <AuthorizeRouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)">
