--- a/src/MoneyManager.Web/Shared/MainLayout.razor
+++ b/src/MoneyManager.Web/Shared/MainLayout.razor
@@ -7,7 +7,7 @@
 @inject NavigationManager Navigation
 @inject IUserProfileService ProfileService
 
-<CascadingAuthenticationState lang="pt-br">
+<CascadingAuthenticationState>
     <AuthorizeView>
         <Authorized>
             <nav class="navbar navbar-expand-lg modern-navbar">
