--- a/src/MoneyManager.Web/App.razor
+++ b/src/MoneyManager.Web/App.razor
@@ -12,7 +12,7 @@
                     <RedirectToLogin />
                 </NotAuthorized>
                 <Authorizing>
-                    <div class="text-center p-5">Autenticando...</div>
+                    <BusyOverlay IsBusy="true" Message="Autenticando..." />
                 </Authorizing>
             </AuthorizeRouteView>
             <FocusOnNavigate RouteData="@routeData" Selector="h1" />
